--- a/views/user/document_hub/client_index_detail.twig
+++ b/views/user/document_hub/client_index_detail.twig
@@ -110,6 +110,51 @@
                                           </div>
                                                 </div>
                                             </form>
+                                            {% else %}
+                                            <!--begin::Heading-->
+                                            <div class="d-flex align-items-center mb-12">
+                                                {% if documentHub[0].status == 'yes' %}
+                                                    <span class="svg-icon svg-icon-4qx ms-n2 me-3 svg-icon-success">
+															<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+																<path opacity="0.3" d="M19 22H5C4.4 22 4 21.6 4 21V3C4 2.4 4.4 2 5 2H14L20 8V21C20 21.6 19.6 22 19 22ZM11.7 17.7L16 14C16.4 13.6 16.4 12.9 16 12.5C15.6 12.1 15.4 12.6 15 13L11 16L9 15C8.6 14.6 8.4 14.1 8 14.5C7.6 14.9 8.1 15.6 8.5 16L10.3 17.7C10.5 17.9 10.8 18 11 18C11.2 18 11.5 17.9 11.7 17.7Z" fill="currentColor"></path>
+																<path d="M10.4343 15.4343L9.25 14.25C8.83579 13.8358 8.16421 13.8358 7.75 14.25C7.33579 14.6642 7.33579 15.3358 7.75 15.75L10.2929 18.2929C10.6834 18.6834 11.3166 18.6834 11.7071 18.2929L16.25 13.75C16.6642 13.3358 16.6642 12.6642 16.25 12.25C15.8358 11.8358 15.1642 11.8358 14.75 12.25L11.5657 15.4343C11.2533 15.7467 10.7467 15.7467 10.4343 15.4343Z" fill="currentColor"></path>
+																<path d="M15 8H20L14 2V7C14 7.6 14.4 8 15 8Z" fill="currentColor"></path>
+															</svg>
+														</span>
+                                                {% else %}
+                                                    <span class="svg-icon svg-icon-4qx ms-n2 me-3 svg-icon-danger">
+                                                                   <svg  xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+																	<path opacity="0.3" d="M19 22H5C4.4 22 4 21.6 4 21V3C4 2.4 4.4 2 5 2H14L20 8V21C20 21.6 19.6 22 19 22ZM16 13.5L12.5 13V10C12.5 9.4 12.6 9.5 12 9.5C11.4 9.5 11.5 9.4 11.5 10L11 13L8 13.5C7.4 13.5 7 13.4 7 14C7 14.6 7.4 14.5 8 14.5H11V18C11 18.6 11.4 19 12 19C12.6 19 12.5 18.6 12.5 18V14.5L16 14C16.6 14 17 14.6 17 14C17 13.4 16.6 13.5 16 13.5Z" fill="currentColor"></path>
+																	<rect x="11" y="19" width="10" height="2" rx="1" transform="rotate(-90 11 19)" fill="currentColor"></rect>
+																	<rect x="7" y="13" width="10" height="2" rx="1" fill="currentColor"></rect>
+																	<path d="M15 8H20L14 2V7C14 7.6 14.4 8 15 8Z" fill="currentColor"></path>
+																</svg></span>
+                                                {% endif %}
+                                                <div class="d-flex flex-column">
+                                                    <h1 class="text-gray-800 fw-bold"><span style="color: #ED141F;">{{ client_details[0].fname}} {{ client_details[0].lname }}</span> {% if documentHub[0].status == 'yes' %} Uploaded the document.{% else %}Not Uploaded the document Yet.{% endif %}</h1>
+                                                </div>
+                                            </div>
+                                            <div class="mb-15">
+                                                <!--begin::Description-->
+                                                <div class="mb-15 fs-5 fw-normal text-gray-800">
+
+                                                    <div class="mb-10">{{ documentHub[0].client_des }}</div>
+                                                    <!--end::Text-->
+                                                    <!--begin::Code-->
+                                                    <div class="row">
+                                                        {% if documentHub[0].file != "" and documentHub[0].file != null %}
+                                                            <div class="col-lg-12 text-center">
+                                                                <a href="{{ env.APP_URL }}{{ documentHub[0].file }}" download="{{ env.APP_URL }}{{ documentHub[0].file }}"  class="btn btn-primary ">
+                                                                    <!--begin::Svg Icon | path: icons/duotune/communication/com005.svg-->
+                                                                    <span class="svg-icon svg-icon-2">
+													<i class="fa-solid fa-download"></i>
+												</span>
+                                                                    Download File</a>
+                                                            </div>
+                                                        {% endif %}
+                                                    </div>
+                                                </div>
+                                            </div>
                                             {% endif %}
                                         </div>
                                     </div>
