--- a/views/user/templates/all.twig
+++ b/views/user/templates/all.twig
@@ -56,11 +56,11 @@
                                         <input type="text" data-kt-customer-table-filter="search" id="search" class="form-control form-control-solid w-250px ps-15" placeholder="Search " />
                                     </div>
                                 </div>
-                                <div class="col-md-6 mt-3 text-md-end text-center">
-                                                            <a type="button" href="/user/template/create" class="btn btn-primary  me-4">
-                                                                <span class="btn-text-inner">Create Template</span>
-                                                            </a>
-                                </div>
+{#                                <div class="col-md-6 mt-3 text-md-end text-center">#}
+{#                                                            <a type="button" href="/user/template/create" class="btn btn-primary  me-4">#}
+{#                                                                <span class="btn-text-inner">Create Template</span>#}
+{#                                                            </a>#}
+{#                                </div>#}
                             </div>
                             <div class="table-responsive">
                                 <table id="table"  class="table table-row-dashed table-row-gray-300 align-middle gs-0 gy-4" style="width:100%">
