--- a/views/user/plans/index.twig
+++ b/views/user/plans/index.twig
@@ -106,7 +106,7 @@
                                                         </div>
                                                     {% endfor %}
                                                 </div>
-                                                <a role="button" class="btn btn-sm btn-primary" onclick="userStatus('{{ plan.slug }}')">Select</a>
+                                                <a role="button" class="btn btn-sm btn-primary" onclick="redirectToDetailPage('{{ plan.slug }}')">Select</a>
                                             </div>
                                         </div>
                                     </div>
@@ -133,7 +133,7 @@
                 });
             });
         });
-        function userStatus(userID) {
+        function redirectToDetailPage(slug) {
             var type =   $('#selected-plan-type').val();
 
             $(this).html('<i class="fa fa-circle-o-notch fa-spin"></i> loading...');
@@ -142,7 +142,7 @@
                 url: '/user/plan/get_plan',
                 type: 'POST',
                 data: {
-                    slug: userID,
+                    slug: slug,
                     type: type,
                     csrf: csrf_token
                 }, success: function (data) {
