--- a/views/auth/login.twig
+++ b/views/auth/login.twig
@@ -40,9 +40,9 @@
     <!--begin::Authentication - Sign-in -->
     <div class="d-flex flex-column flex-lg-row flex-column-fluid">
         <!--begin::Aside-->
-        <div class="d-flex flex-column flex-lg-row-auto w-xl-600px positon-xl-relative" style="background-color: #000">
+        <div class="d-flex flex-column flex-lg-row-auto w-xl-600px positon-xl-relative" style="background-image: url(https://i.gifer.com/zUL.gif); background-size: cover; ">
             <!--begin::Wrapper-->
-            <div class="d-flex flex-column position-xl-fixed top-0 bottom-0 w-xl-600px scroll-y">
+            <div class="d-flex flex-column position-xl-fixed top-0 bottom-0 w-xl-600px scroll-y" style="background-color: rgba(1,1,1,0.7);">
                 <!--begin::Content-->
                 <div class="d-flex flex-column text-center mt-20 p-10 pt-lg-20">
                     <!--begin::Logo-->
